Downgraded to Java 17.